# D3D8_TO_GLES

./: AGENTS.md  CMakeLists.txt  README.md
include/: d3d8_defs.h  d3d8_to_gles.h  dx8caps.h  objbase.h  windows.h
src/: d3d8_to_gles.c  dx8caps.c
tests/: CMakeLists.txt  adapter_info_test.c  box_render_test.c  buffer_lock_flags_test.c  capability_test.c  caps_flags_test.c  color_mask_draw_test.c  color_write_mask_test.c  cylinder_stub_test.c  point_list_test.c  sphere_stub_test.c  stencil_enable_test.c  stencil_mask_draw_test.c  tex2_coord_test.c  texcoord_index_test.c  texture_stage_test.c  triangle_strip_test.c  wireframe_zbias_test.c  xyzrhw_test.c
tools/: CLI.md  egl_config_cli.c
