add_executable(capability_test capability_test.c)
target_link_libraries(capability_test PRIVATE d3d8_to_gles)
add_test(NAME capability_test COMMAND capability_test)

add_executable(caps_flags_test caps_flags_test.c)
target_link_libraries(caps_flags_test PRIVATE d3d8_to_gles)
add_test(NAME caps_flags_test COMMAND caps_flags_test)
